@@ -1,3 +1,11 @@
+2013-02-11         Eli Zaretskii	<eliz@gnu.org>
+
+	* filefuncs.c (S_ISLNK, lstat, readlink, S_IRGRP, S_IWGRP, S_IXGRP,
+	S_IROTH, S_IWOTH, S_IXOTH, S_ISUID, S_ISGID, S_ISVTX, major, minor):
+	Define if needed.
+	(fill_stat_array, init_filefuncs, func_table): Fix for Win 32.
+	* time.c: Port to Win 32.
+
 2013-01-27         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* gawkdirfd.h: New file.
